# test_external

./: CMakeLists.txt  library.h  vcpkg.json
src/: library.cpp
test/: CMakeLists.txt
